i2c implementation, compiles, not tested
updated SPI driver comments (basic cleanup), implemented I2C driver, compiles, but not checked yet

--- a/.gitignore
+++ b/.gitignore
@@ -410,3 +410,4 @@ source/mikroE/hal/src/lib_hal_spi_master/CMakeLists.txt
 source/mikroE/hal/src/lib_hal_spi_master/hal_spi_master.c
 source/mikroE/hal/src/lib_hal_uart/CMakeLists.txt
 source/mikroE/hal/src/lib_hal_uart/hal_uart.c
+mikroe_port/.vscode/settings.json
