--- a/mikroe_port/.vscode/settings.json
+++ b/mikroe_port/.vscode/settings.json
@@ -19,7 +19,11 @@
         "string_view": "cpp",
         "type_traits": "cpp",
         "unordered_map": "cpp",
-        "vector": "cpp"
+        "vector": "cpp",
+        "__bit_reference": "cpp",
+        "__split_buffer": "cpp",
+        "array": "cpp",
+        "initializer_list": "cpp"
     },
     "particle.firmwareVersion": "5.3.0",
     "particle.targetPlatform": "p2",
