--- a/mikroe_port/.vscode/settings.json
+++ b/mikroe_port/.vscode/settings.json
@@ -23,7 +23,8 @@
         "__bit_reference": "cpp",
         "__split_buffer": "cpp",
         "array": "cpp",
-        "initializer_list": "cpp"
+        "initializer_list": "cpp",
+        "__string": "cpp"
     },
     "particle.firmwareVersion": "5.3.0",
     "particle.targetPlatform": "p2",
