--- a/mikroe_port/.vscode/settings.json
+++ b/mikroe_port/.vscode/settings.json
@@ -24,7 +24,8 @@
         "__split_buffer": "cpp",
         "array": "cpp",
         "initializer_list": "cpp",
-        "__string": "cpp"
+        "__string": "cpp",
+        "ostream": "cpp"
     },
     "particle.firmwareVersion": "5.3.0",
     "particle.targetPlatform": "p2",
